# nativegl

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativegl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativegl.cpp
app/src/main/cpp/gl/: GLBase.cpp  GLBase.h  GLRender.cpp  GLRender.h
app/src/main/cpp/shader/: GLShaderSource.h
app/src/main/cpp/utils/: ImageBase.cpp  ImageBase.h  SDRImage.cpp  SDRImage.h  log.h
app/src/main/java/com/example/nativegl/: JNIProxy.kt  MainActivity.kt  SurfaceViewHolder.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativegl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
